# mwc

./: README.md  ashwc.desktop  deafult.conf  default.conf  meson.build
ashwc-ipc/: ashwc-ipc.c
examples/: active-toplevel.sh  active-workspace.sh  example.conf  fix-portals.sh
src/: ashwc.c  ashwc.h  config.c  config.h  decoration.c  decoration.h  dnd.c  dnd.h  gamma_control.c  gamma_control.h  ipc.c  keybinds.c  keybinds.h  keyboard.c  keyboard.h  layer_surface.c  layer_surface.h  layout.c  layout.h  mwc.c  output.c  output.h  pointer.c  pointer.h  popup.c  popup.h  rendering.c  rendering.h  session_lock.c  session_lock.h  something.c  something.h  toplevel.c  toplevel.h  workspace.c  workspace.h
src/config/: config.c  config.h
src/decoration/: decoration.c  decoration.h
src/dnd/: dnd.c  dnd.h
src/gamma_control/: gamma_control.c  gamma_control.h
src/helpers/: helpers.c  helpers.h
src/ipc/: ipc.c  ipc.h
src/keybinds/: keybinds.c  keybinds.h
src/keyboard/: keyboard.c  keyboard.h
src/layer_surface/: layer_surface.c  layer_surface.h
src/layout/: grid.c  layout.c  layout.h  master.c  monocle.c
src/output/: output.c  output.h
src/pointer/: pointer.c  pointer.h
src/popup/: popup.c  popup.h
src/rendering/: rendering.c  rendering.h
src/session_lock/: session_lock.c  session_lock.h
src/something/: something.c  something.h
src/toplevel/: toplevel.c  toplevel.h
src/workspace/: workspace.c  workspace.h
util/: ipc_shared.h
